[workspace]
members = [
	"benches",
	"client/http-client",
	"client/transport",
	"client/wasm-client",
	"client/ws-client",
	"core",
	"examples",
	"jsonrpsee",
	"proc-macros",
	"server",
	"test-utils",
	"tests",
	"tests/wasm-tests",
	"tests/proc-macro-core",
	"types",
]
resolver = "2"

[workspace.package]
authors = ["Parity Technologies <admin@parity.io>", "Pierre Krieger <pierre.krieger1708@gmail.com>"]
version = "0.24.7"
edition = "2021"
rust-version = "1.74.1"
license = "MIT"
repository = "https://github.com/paritytech/jsonrpsee"
documentation = "https://docs.rs/jsonrpsee"
homepage = "https://www.parity.io/"
keywords = ["jsonrpc", "json", "http", "websocket", "WASM"]
readme = "README.md"

[workspace.dependencies]
jsonrpsee-types = { path = "types", version = "0.24.7" }
jsonrpsee-core = { path = "core", version = "0.24.7" }
jsonrpsee-server = { path = "server", version = "0.24.7" }
jsonrpsee-ws-client = { path = "client/ws-client", version = "0.24.7" }
jsonrpsee-http-client = { path = "client/http-client", version = "0.24.7" }
jsonrpsee-wasm-client = { path = "client/wasm-client", version = "0.24.7" }
jsonrpsee-client-transport = { path = "client/transport", version = "0.24.7" }
jsonrpsee-proc-macros = { path = "proc-macros", version = "0.24.7" }

tower = "0.4"
tower-http = "0.5"

#Most are probably not needed here
[patch.crates-io]
c-kzg = {path = "../c-kzg-4844"}
tokio = { git = "https://github.com/cristibctr/tokio-wasix", branch = "wasix-1.41.1" }
socket2 = { git = "https://github.com/cristibctr/socket2.git", branch = "v0.6.0" }
hostname = { path = "../hostname"}
libc = { git = "https://github.com/cristibctr/libc-0.2.169", branch = "wasix-0.2.169" }
metrics-process = { git = "https://github.com/cristibctr/rs-metrics-process", branch = "feat/add-wasm-support" }
rustls-platform-verifier = { version = "=0.5", optional = false, path = "../rustls-platform-verifier/rustls-platform-verifier" }
jsonrpsee = { git = "https://github.com/cristibctr/jsonrpsee", rev = "v0.24.9" }
jsonrpsee-core = { git = "https://github.com/cristibctr/jsonrpsee", rev = "v0.24.9" }
jsonrpsee-server = { git = "https://github.com/cristibctr/jsonrpsee", rev = "v0.24.9" }
jsonrpsee-http-client = { git = "https://github.com/cristibctr/jsonrpsee", rev = "v0.24.9" }
jsonrpsee-types = { git = "https://github.com/cristibctr/jsonrpsee", rev = "v0.24.9" }
getrandom = { git = "https://github.com/cristibctr/getrandom", branch = "feat/add-wasm-support-0.3.1" }
procfs = { git = "https://github.com/cristibctr/procfs", branch = "feat/add-wasm-support" }
rustix = { git = "https://github.com/cristibctr/rustix", branch = "feat/add-wasm-support" }
crossterm = { git = "https://github.com/cristibctr/crossterm", branch = "feat/add-wasm-support" }
mio = { git = "https://github.com/cristibctr/mio", branch = "v1.0.1" }
parking_lot = { git = "https://github.com/cristibctr/parking_lot", branch = "master" }
reqwest = { git = "https://github.com/cristibctr/reqwest", branch = "master" }
hyper-util = { git = "https://github.com/cristibctr/hyper-util", branch = "master" }
discv5 = { git = "https://github.com/cristibctr/discv5", rev = "v0.8.1" }
interprocess = { git = "https://github.com/cristibctr/interprocess", branch = "main" }
hickory-resolver = { git = "https://github.com/cristibctr/hickory-dns", branch = "v0.25.0-alpha.5" }